# meilisearch-rust-example-dos

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
